[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/other/hud/num1.png" type="Texture" id=1]
[ext_resource path="res://assets/other/hud/num7.png" type="Texture" id=2]
[ext_resource path="res://assets/other/hud/num6.png" type="Texture" id=3]
[ext_resource path="res://assets/other/hud/num9.png" type="Texture" id=4]
[ext_resource path="res://assets/other/hud/num2.png" type="Texture" id=5]
[ext_resource path="res://assets/other/hud/num4.png" type="Texture" id=6]
[ext_resource path="res://assets/other/hud/num3.png" type="Texture" id=7]
[ext_resource path="res://assets/other/hud/HudText.png" type="Texture" id=8]
[ext_resource path="res://assets/other/hud/num8.png" type="Texture" id=9]
[ext_resource path="res://assets/other/hud/num0.png" type="Texture" id=10]
[ext_resource path="res://assets/other/hud/num5.png" type="Texture" id=11]
[ext_resource path="res://src/HUD.gd" type="Script" id=12]
[ext_resource path="res://assets/other/hud/temp2.png" type="Texture" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 11 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 9 ), ExtResource( 4 ) ],
"loop": false,
"name": "default",
"speed": 0.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 11 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 9 ), ExtResource( 4 ) ],
"loop": false,
"name": "default",
"speed": 0.0
} ]

[node name="HUD" type="Control"]
margin_left = 1.0
margin_top = -240.0
margin_right = 321.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
visible = false
margin_right = 256.0
margin_bottom = 224.0
texture = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergyText" type="Sprite" parent="CanvasLayer"]
position = Vector2( 24, 27 )
texture = ExtResource( 8 )

[node name="Digit1" type="AnimatedSprite" parent="CanvasLayer/EnergyText"]
position = Vector2( 28, -1 )
frames = SubResource( 1 )

[node name="Digit2" type="AnimatedSprite" parent="CanvasLayer/EnergyText"]
position = Vector2( 36, -1 )
frames = SubResource( 2 )

[node name="ItemPos1" type="Position2D" parent="CanvasLayer"]
position = Vector2( 88, 15 )

[node name="ItemPos2" type="Position2D" parent="CanvasLayer"]
position = Vector2( 112, 15 )

[node name="ItemPos3" type="Position2D" parent="CanvasLayer"]
position = Vector2( 136, 15 )

[node name="ItemPos4" type="Position2D" parent="CanvasLayer"]
position = Vector2( 160, 15 )

[node name="ItemPos5" type="Position2D" parent="CanvasLayer"]
position = Vector2( 184, 15 )
